CSS/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); /* Montserrat   */
@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap"); /* Inter */
@import url("https://fonts.googleapis.com/css2?family=Libre+Bodoni&display=swap");
/*

font-family: 'Montserrat', sans-serif;
font-family: 'Inter', sans-serif;
font-family: 'Libre Bodoni', serif;

*/

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --yellow-color: #f0d028;
  --red-color: #f02828;
  --blue-color: #0071dc;
  --black-color: #000000;
  --white-color: #f6f6f6;
}

h1 {
  font-size: 22px;
  font-family: "Inter", sans-serif;
  font-weight: 600;
}

h2 {
  font-size: 16px;
  font-family: "Montserrat", sans-serif;
  font-weight: 600 !important;
}

body {
  background-color: var(--white-color);
}

.row {
  max-width: 1520px;
}

/* ---------------------------------------------------Navbar Style--------------------------------------------------- */

.logo {
  width: 200px;
  height: 49px;
}

.navbar {
  background-color: var(--yellow-color) !important;
  font-family: "Inter", sans-serif;
  font-size: 12px;
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler-icon:active {
  box-shadow: none;
  outline: none;
  border: none;
}

.submit-btn {
  font-family: "Inter", sans-serif;
  font-size: 12px;
  background-color: var(--black-color);
  color: white;
  width: 61px;
  height: 38px;
  border-radius: 0 0 0 0;
  margin-right: 1rem !important;
}

.submit-btn:hover {
  background-color: var(--black-color);
  color: white;
}

.form-control {
  width: 250px;
  height: 39px;
  border-radius: 0 0 0 0;
  outline: 1px solid black !important;
}

.form-control::placeholder {
  font-size: 14px;
}

.form-control:focus {
  box-shadow: none !important;
}

.dropdown-toggle {
  width: 124px;
  height: 32px;
  background-color: white;
  text-align: center;
}

.white-circle {
  margin-top: -13px;
  margin-left: -10px;
}

/* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */

/* ---------------------------------------------------Category Style --------------------------------------------------- */

.category-btn {
  font-size: 11px;
  background-color: var(--black-color);
  color: white;
  padding: 0.87em 1em;
  border-radius: 0.7em;
  /* margin-left: 13%; */
}

.customer-service {
  font-size: 10px;
  font-family: "Montserrat", sans-serif;
  position: absolute;
  left: 5em;
  top: 3em;
}

.category-list li {
  list-style-type: none;
  margin-top: 1.2em;
  font-size: 12px;
  font-weight: 600;
}

.category-list li a {
  color: black;
  text-decoration: none;
}

.contact {
  position: relative;
}

.contact img {
  margin-right: 1em;
  margin-top: 0.5em;
}

/* ---------------------------------------------------Category Style Ends--------------------------------------------------- */

/* ---------------------------------------------------Hero SectionStyle --------------------------------------------------- */
.hero-sec {
  width: 1520px;
  background-image: url(../Images/homepage-banner.png);
  background-repeat: no-repeat;
  background-size: cover;
  height: 414px;
  border-radius: 22px;
}

.clerical {
  font-family: "Libre Bodoni";
  font-style: normal;
  font-weight: 400;
  font-size: 32px !important;
  line-height: 80px;
  margin: 2rem 0 0 1rem;
}

.hurry-up {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 24px;
  margin: 3rem 0 0 1rem;
}

.read-more {
  width: 132px;
  height: 41px;
  background: #f0d028;
  border-radius: 8px;
  margin: 2.5rem 0 0 1rem;
  color: white;
  border: none !important;
}
/* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */

/* ---------------------------------------------------Menu --------------------------------------------------- */
.menu img {
  width: 120px;
  margin: 0 0.8em;
}
/* ---------------------------------------------------Menu Ends--------------------------------------------------- */

/* ---------------------------------------------------Office and School--------------------------------------------------- */

.school {
  background: url(../Images/school.png);
  background-size: cover;
  max-width: 700px;
  height: 335px;
}

.office {
  background: url(../Images/office.png);
  background-size: cover;
  height: 335px;
  max-width: 700px;
}

.office-btn {
  width: 123.28px;
  height: 42px;
  background: #f0d028;
  border: none;
  color: white;
  margin: 4rem 0rem 0 3rem;
  font-family: "Montserrat", sans-serif;
}
.shop-now-btn {
  color: white;
  padding: 4px 12px;
  background: #4f8bdb;
  border-radius: 2px;
  border: none;
  margin: 10rem 0rem 0 3rem;
  font-family: "Montserrat", sans-serif;
}

/* ------------------------------------------------Office and School Ends------------------------------------------------ */

/* ---------------------------------------------------Catalog Style--------------------------------------------------- */
.card-title {
  font-size: 13px;
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
}

.card-text {
  font-size: 14px;
  font-family: "Montserrat", sans-serif;
  font-weight: 600 !important;
  color: black;
}

.add-btn {
  font-family: "Montserrat", sans-serif;
  font-size: 12px;
  font-weight: 600;
  width: 90px;
  height: 32px;
  background: #f0d028;
  border-radius: 6px;
  border: none !important;
  margin-left: 2.5rem;
}

.catalog .card {
  width: 10rem;
  margin-top: 0.5rem;
}

.catalog .col-md-2 {
  margin-right: 1rem;
}

/* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */

/* ---------------------------------------------------Deals of the week --------------------------------------------------- */
.deals-pic {
  margin-left: -10rem;
}
/* --------------------------------------------------Deals of the week Ends--------------------------------------------------- */

/* ---------------------------------------------------Image Overlay--------------------------------------------------- */
.img-overlay {
  background: linear-gradient(
      rgba(217, 217, 217, 0.79),
      rgba(217, 217, 217, 0.79)
    ),
    url(../Images/homepage-banner.png) no-repeat;
  border-radius: 13px;
  font-family: "Montserrat";
}

.img-overlay input {
  background-color: transparent;
  width: 399px;
  height: 47px;
  border: 1px solid rgba(0, 0, 0, 0.29);
}

.img-overlay input:focus {
  background-color: transparent;
}
.img-overlay button {
  color: white;
  background: #ff0000;
  border: 1px solid rgba(0, 0, 0, 0.29);
  width: 130px;
  height: 47px;
}

.subscribe-for-the-news {
  font-size: 24px;
  margin-top: 1rem;
}

/* ---------------------------------------------------Image Overlay Ends--------------------------------------------------- */

/* ---------------------------------------------------Footer --------------------------------------------------- */
.list-group {
  background-color: transparent;
  border: none;
  outline: none;
  font-family: "Montserrat", sans-serif;
  font-size: 12px;
}

.list-group-item {
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
}

.play-store {
  height: 33px;
  width: 100px;
  border-radius: 0px;
}
/* ---------------------------------------------------Footer Ends--------------------------------------------------- */

